# MerchantBot

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml  update.md
merchantbot/: __init__.py  bot.py  config.py  logging.py  storage.py
merchantbot/cogs/: featured.py  logs.py  lookup.py  panels.py  verification.py  welcome.py
merchantbot/data/: ticket_categories.json
merchantbot/ticketsystem/: logger.py
merchantbot/ticketsystem/Assets/: classes.py  config.json  functions.py  tickets.json
merchantbot/ticketsystem/Cogs/: activetickets.py  add.py  blacklist.py  blacklistlist.py  close.py  logs.py  managetickets.py  move.py  oldest.py  private.py  remove.py  rename.py  sendtickets.py  ticketcount.py  ticketlogs.py
merchantbot/ui/: getting_started.py  information.py  loader_api.py  verification.py
merchantbot/webhooks/: plugins.py  security.py  server.py  verify.py
